# Kazumi-rs

./: .gitignore  README.md  pubspec.yaml
android/: settings.gradle
android/app/: build.gradle
lib/: main.dart
lib/rust_bridge/: kazumi_core.dart
lib/services/plugin/: xpath_rule_strategy.dart
rKazumi-core/: Cargo.toml
rKazumi-core/src/: lib.rs
rKazumi-core/src/network/: client.rs  middleware.rs  mod.rs
rKazumi-core/src/parsers/: danmaku.rs  m3u8.rs  mod.rs
rKazumi-core/src/rule_engine/: executor.rs  mod.rs  parser.rs  xpath_evaluator.rs
rKazumi-core/src/utils/: mod.rs
